# llama_mobile

./: .gitignore  README.md  linker_errors.txt  llama_mobile.sln  test.air
examples/cpp/: CMakeLists.txt  README.md  api_example.cpp  benchmark_example.cpp  build.sh  main_conversation_ffi.cpp  main_embed.cpp  main_llm.cpp  main_tts.cpp  main_vlm.cpp  main_vlm_ffi.cpp  simple_api_example.cpp  utils.h
lib/: CMakeLists.txt  README.md  llama_mobile.h  llama_mobile_api.cpp  llama_mobile_api.h  llama_mobile_bench.cpp  llama_mobile_chat.cpp  llama_mobile_completion.cpp  llama_mobile_context.cpp  llama_mobile_embedding.cpp  llama_mobile_ffi.cpp  llama_mobile_loader.cpp  llama_mobile_lora.cpp  llama_mobile_mnn.cpp  llama_mobile_mnn.h  llama_mobile_multimodal.cpp  llama_mobile_tokenization.cpp  llama_mobile_tts.cpp  llama_mobile_unified.h  llama_mobile_utils.cpp
lib/MNN/: CMakeLists.txt  build_lib.sh
lib/MNN/apps/frameworks/mnn_tts/: CMakeLists.txt
lib/MNN/apps/frameworks/mnn_tts/include/bertvits2/: mnn_bertvits2_tts_impl.hpp  utils.hpp
lib/MNN/apps/frameworks/mnn_tts/include/piper/: mnn_piper_tts_impl.hpp
lib/MNN/backupcode/cpubackend/: BlstmComputer.cpp  CPULRN.cpp  CPULSTM.cpp  CPUSoftmax.cpp  CPUSpatialProduct.cpp  ConvolutionWinograd3D.cpp
lib/MNN/backupcode/cpubackend/bf16/: BF16Functions.cpp  BF16Unary.cpp
lib/MNN/backupcode/cpubackend/compute/: DeconvolutionWithStride.cpp  GemmInt8Executor.cpp
lib/MNN/cmake/: KleidiAI.cmake
lib/MNN/demo/exec/: pictureRecognition_batch.cpp  pictureRecognition_module.cpp
lib/MNN/include/MNN/: MNNDefine.h  MNNSharedContext.h
lib/MNN/project/android/gradle/wrapper/: gradle-wrapper.properties
lib/MNN/source/backend/arm82/: Arm82Backend.cpp  Arm82Backend.hpp  Arm82Functions.cpp  Arm82Functions.hpp  Arm82Interp.cpp  Arm82OptFunc.cpp  Arm82OptFunc.hpp  Arm82Relu.cpp  Arm82Vec.hpp  Arm82WinogradOptFunc.cpp  CMakeLists.txt
lib/MNN/source/backend/cpu/: BinaryUtils.hpp  CPUAttention.cpp  CPUBackend.cpp  CPUBinaryInt8.cpp  CPUConvolution.cpp  CPUDepthwiseConvInt8.cpp  CPUEltwiseInt8.cpp  CPUFixedPoint.hpp  CPUInstanceNorm.cpp  CPUMoments.cpp  CPUPoolInt8.cpp  CPUQuanConvolutionDepthwise.cpp  CPUQuantizedAdd.cpp  CPURaster.cpp  CPUSoftmax.cpp  CPUTFQuantizedConv2D.cpp  CPUTopKV2.cpp  CPUUnary.cpp
lib/MNN/source/backend/cpu/arm/: CMakeLists.txt  CommonOptFunctionNeon.cpp  mnn_kleidiai.cpp
lib/MNN/source/backend/cpu/arm/arm32/: MNNAddC4WithStride.S  MNNAvgPoolInt8.S  MNNBGRAToBGRC8.S  MNNC3ToC4Fast.S  MNNGelu.S  MNNRGBAToBGRFast.S  MNNRGBAToGRAYFast.S  MNNRGBToBGR555Fast.S  MNNRGBToBGR565Fast.S  MNNRGBToBGRC8.S  MNNRGBToGRAYFast.S  MNNSamplerC4BilinearOpt.S
lib/MNN/source/backend/cpu/arm/arm64/: MNNAddC4WithStride.S  MNNAvgPoolInt8.S  MNNGelu.S  MNNGemmInt8AddBiasScale_ARMV82_Unit.S  MNNGemmInt8AddBiasScale_ARMV86_Unit.S  (+22 more)
lib/MNN/source/backend/cpu/bf16/: BF16Functions.cpp  VecHalf.hpp
lib/MNN/source/backend/cpu/compute/: CommonOptFunction.cpp  CommonOptFunction.h  ConvInt8TiledExecutor.cpp  ConvInt8Winograd.cpp  ConvOpt.cpp  ConvOpt.h  ConvolutionFloatFactory.cpp  ConvolutionPackFreeWinograd.cpp  ConvolutionPackWinograd.cpp  ConvolutionWinogradBridge.cpp  IdstConvolutionInt8.cpp  ImageProcessFunction.cpp  Int8FunctionsOpt.cpp  Int8FunctionsOpt.h  OptimizedComputer.cpp  ResizeFunction.cpp  SparseConvInt8TiledExecutor.cpp  SparseConvolutionTiledExecutor.cpp
lib/MNN/source/backend/cpu/x86_x64/: CMakeLists.txt  FunctionDispatcher.cpp  cpu_id.cc
lib/MNN/source/backend/metal/: MetalBackend.mm
lib/MNN/source/core/: Macro.h  SimdHeader.h
lib/MNN/source/cv/: Matrix_CV.cpp  SkNx.h
lib/MNN/source/math/: Matrix.cpp  Vec.hpp
lib/MNN/source/shape/: ShapeDetectionOutput.cpp  ShapeDynamicQuant.cpp
lib/MNN/tools/cpp/: ExprDebug.hpp  MNNV2Basic.cpp  getPerformance.cpp
lib/MNN/tools/quantization/: calibration.cpp
lib/MNN/transformers/llm/engine/: CMakeLists.txt
lib/MNN/transformers/llm/engine/src/: llm.cpp  tokenizer.cpp
lib/llama_cpp/: arg.cpp  chat.cpp  common.cpp  download.cpp  ggml-metal-device.m  ggml-metal.m  ggml-metal.metal  ggml-quants.c  ggml-threading.cpp  ggml.c  gguf.cpp  json-partial.cpp  llama-arch.cpp  llama-arch.h  llama-context.cpp  llama-kv-cache-iswa.cpp  llama-memory-hybrid.cpp  llama-memory-recurrent.cpp  llama-mmap.cpp  llama-model-loader.h  llama-model.cpp  llama-model.h  llama-vocab.cpp  llama.cpp  llguidance.cpp  ngram-cache.cpp  speculative.cpp  unicode.cpp  version.cpp
lib/llama_cpp/ggml-cpu/: ggml-cpu-aarch64-quants.c  ggml-cpu-aarch64-repack.cpp  ggml-cpu-generic-repack.cpp  sgemm.cpp
lib/llama_cpp/tools/mtmd/: mtmd-audio.cpp
lib/tests/: CMakeLists.txt  Makefile  chat_example.cpp  chat_example.cpp.bak  cmake_install.cmake  direct_test.cpp  test_api.cpp
llama_mobile-Android/: CMakeLists.txt  README.md  build.gradle  settings.gradle
llama_mobile-Android/src/main/: AndroidManifest.xml
llama_mobile-Android/src/main/cpp/: CMakeLists.txt  llama_mobile_jni.cpp
llama_mobile-Android/src/main/java/com/llamamobile/: LlamaMobile.kt
llama_mobile-android-SDK/src/main/cpp/: CMakeLists.txt  llama_mobile_jni.cpp
llama_mobile-ios/: CMakeLists.txt  README.md  info.plist
llama_mobile-ios/llama_mobile.xcframework/: info.plist
llama_mobile-ios/llama_mobile.xcframework/ios-arm64/llama_mobile.framework/: Info.plist
llama_mobile-ios/llama_mobile.xcframework/ios-arm64/llama_mobile.framework/Headers/: llama_mobile_unified.h
llama_mobile-ios/llama_mobile.xcframework/ios-arm64/llama_mobile.framework/Modules/: module.modulemap
llama_mobile-ios/llama_mobile.xcframework/ios-arm64/llama_mobile.framework/_CodeSignature/: CodeResources
llama_mobile-ios/llama_mobile.xcframework/ios-arm64_x86_64-simulator/llama_mobile.framework/: Info.plist
llama_mobile-ios/llama_mobile.xcframework/ios-arm64_x86_64-simulator/llama_mobile.framework/Headers/: llama_mobile_ffi.h
llama_mobile-ios/llama_mobile.xcframework/ios-arm64_x86_64-simulator/llama_mobile.framework/Headers/llama_cpp/: unicode.h
llama_mobile-ios/llama_mobile.xcframework/ios-arm64_x86_64-simulator/llama_mobile.framework/_CodeSignature/: CodeResources
(+116 files in other folders)
